--- a/css/styles.css
+++ b/css/styles.css
@@ -109,6 +109,10 @@ img {
   color: var(--secondary-text-color);
 }
 
+.header-address {
+  margin-right: 10px;
+}
+
 /*section-main*/
 
 .section-main {
@@ -161,9 +165,6 @@ img {
   display: block;
 }
 .section-middle {
-  /* display: flex; */
-  /* width: 1170px;
-  height: 98px; */
   padding-top: 94px;
   padding-bottom: 94px;
 }
@@ -175,8 +176,8 @@ img {
 .skill-box-four {
   display: flex;
   flex-direction: column;
-  width: 270px;
-  height: 98px;
+  /* width: 270px;
+  height: 98px; */
 }
 .skill-box-two,
 .skill-box-three {
@@ -211,6 +212,28 @@ img {
   line-height: 1.7;
   letter-spacing: 0.03em;
   color: var(--secondary-text-color);
+}
+.maiddle-icons-ul {
+  display: flex;
+  padding: 0;
+}
+.maiddle-icons-li {
+  justify-content: center;
+  width: 270px;
+  height: 120px;
+}
+.maiddle-icons-li:not(:last-child) {
+  margin-right: 30px;
+}
+.icons-middle {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 270px;
+  min-height: 120px;
+  background: #f5f4fa;
+  border-radius: 4px;
+  margin-bottom: 30px;
 }
 
 /* section pictures */
@@ -290,6 +313,58 @@ img {
 .team {
   background: #ffffff;
 }
+.icons-social {
+  display: flex;
+}
+.social-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background: #ffffff;
+  fill: #afb1b8;
+}
+.icon-social:not(:last-child) {
+  margin-right: 10px;
+}
+.social-link:hover {
+  background-color: #2196f3;
+  fill: #ffffff;
+}
+.social-link:hover .social-icon {
+  fill: #ffffff;
+}
+
+/* constant-client */
+
+.section-constant-client {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+.companys-item {
+  display: flex;
+}
+.companys {
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+}
+.companys-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 170px;
+  height: 92px;
+  background: #ffffff;
+  fill: #afb1b8;
+}
+.companys:not(:last-child) {
+  margin-right: 30px;
+}
+.companys-link:hover {
+  fill: #2196f3;
+}
 
 /*footer*/
 
@@ -297,6 +372,10 @@ img {
   padding-top: 60px;
   padding-bottom: 60px;
   background-color: #2f303a;
+}
+.footer-item {
+  display: flex;
+  align-items: baseline;
 }
 .logo-two {
   display: block;
@@ -330,7 +409,46 @@ img {
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
 }
+.connection {
+  display: flex;
+  flex-direction: column;
 
+  width: 206px;
+  height: 80px;
+  margin-left: 70px;
+}
+.connect {
+  display: block;
+  margin-bottom: 20px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.1;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+}
+.footer-link {
+  padding: 0;
+}
+.social-link-footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background: rgba(255, 255, 255, 0.1);;
+  fill: #afb1b8;
+}
+.icon-social-footer:not(:last-child) {
+  margin-right: 10px;
+}
+.social-link-footer:hover {
+  background-color: #2196f3;
+  fill: #ffffff;
+}
+.social-link-footer:hover .social-icon {
+  fill: #ffffff;
+}
 /*hero*/
 
 .hero {
@@ -348,16 +466,9 @@ img {
   display: flex;
   justify-content: center;
   padding: 0;
-  /* width: 575px;
-  height: 54px;
-  margin-left: auto;
-  margin-right: auto; */
   margin-bottom: 50px;
 }
-.cap .cap-btns {
-  /* width: 575px;
-  height: 54px; */
-}
+
 .cap .cap-btns .ad:not(:last-child) {
   margin-right: 8px;
 }
@@ -419,15 +530,12 @@ img {
 .services .content:nth-child(3n + 1) {
   margin-left: 0;
 }
-/* .services .content:nth-last-child(-n + 3) {
-  margin-bottom: 94px;
-} */
+
 .services .content:nth-last-child(-n + 6) {
   margin-top: 30px;
 }
 .content {
   width: 370px;
-  /* height: 404px; */
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
@@ -437,8 +545,6 @@ img {
   border-bottom: 1px solid #eeeeee;
 }
 .offer {
-  /* display: block;
-  width: 322px; */
   padding: 20px 24px 20px 24px;
   font-weight: 700;
   font-size: 18px;
