--- a/css/styles.css
+++ b/css/styles.css
@@ -118,7 +118,8 @@ img {
 .section-main {
   padding-top: 200px;
   padding-bottom: 200px;
-  background: #2f303a;
+  background:rgba(47, 48, 58, 0.4);
+  background-image: url(../images/bgmain.jpg);
 }
 .section-main .about-name {
   width: 696px;
@@ -176,8 +177,6 @@ img {
 .skill-box-four {
   display: flex;
   flex-direction: column;
-  /* width: 270px;
-  height: 98px; */
 }
 .skill-box-two,
 .skill-box-three {
@@ -296,9 +295,12 @@ img {
   display: flex;
   padding-left: 0;
 }
-.team-photo .team-one,
-.team-photo .team-two,
-.team-photo .team-three {
+.team-picture {
+  background: #FFFFFF;
+box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+border-radius: 0px 0px 4px 4px;
+}
+.team-picture:not(:last-child) {
   margin-right: 30px;
 }
 .name {
