--- a/css/styles.css
+++ b/css/styles.css
@@ -139,6 +139,8 @@ img {
   background: rgba(47, 48, 58, 0.4);
   background-image: url(../images/bgmain.jpg);
   background-color: #c4c4c4;
+  border: 1px solid #000000;
+filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 .section-main .about-name {
   width: 696px;
