--- a/css/styles.css
+++ b/css/styles.css
@@ -140,7 +140,7 @@ img {
   background-image: url(../images/bgmain.jpg);
   background-color: #c4c4c4;
   border: 1px solid #000000;
-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 .section-main .about-name {
   width: 696px;
@@ -570,6 +570,7 @@ filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 .portfolio-link:hover,
 .portfolio-link:focus {
+  fill: currentColor;
 }
 .offer {
   padding: 20px 24px 20px 24px;
